<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="textview">TextView</string>
    <string name="seleccionar_una_categoria">Seleccionar una categoria</string>
    <string name="lista_de_productos">Lista de productos</string>
    <string name="cantidad_a_pedir">Cantidad a pedir</string>
    <string name="_0">0</string>
    <string name="agregar">Agregar</string>
    <string name="pedido_titulo">Datos del Pedido</string>
    <string name="pedido_lbl_correo">Correo Electronico</string>
    <string name="pedido_lbl_modo_entrega">Modo de Entrega</string>
    <string name="pedido_lbl_direccion">Direccion de Envio</string>
    <string name="pedido_lbl_hora_entrega">Hora Solicitada (hh:mm)</string>
    <string name="canal_estado_nombre">Canal1</string>
    <string name="canal_estado_descr">Canal1</string>

</resources>
