<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listaProducto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_una_categoria" />

        <Spinner
            android:id="@+id/cmbProductosCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_de_productos" />

        <ListView
            android:id="@+id/lstProductos"
            android:layout_width="wrap_content"
            android:layout_height="335dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cantidad_a_pedir" />

        <EditText
            android:id="@+id/edProdCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/_0"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="449dp" />

        <Button
            android:id="@+id/btnProdAddPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="94dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>